[package]
name = "icloud-web-album-download"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/Cobular/icloud-web-album-download.git"
description = "A tool to download photos from iCloud shared web albums"
homepage = "https://github.com/Cobular/icloud-web-album-download"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
regex = "1.10"
futures = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
